fix: eliminate theme and loading flicker on page refresh

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -45,3 +45,17 @@ body {
 .border-divider {
   border-color: var(--border-divider);
 }
+
+.theme-icon-sun {
+  display: block;
+}
+.theme-icon-moon {
+  display: none;
+}
+
+.darkmode .theme-icon-sun {
+  display: none;
+}
+.darkmode .theme-icon-moon {
+  display: block;
+}
